[package]
name = "unicorn_test"
version.workspace = true
authors = [""]
description = "Frida backend library for LibAFL"
documentation = "https://docs.rs/"
repository = "https://github.com/AFLplusplus/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "unicorn"]
edition = "2021"
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]

[dependencies]
libafl = { path = "../libafl", version = "0.8.2", default-features = false, features = ["std", "derive", "llmp_compression"] }
libafl_targets = { path = "../libafl_targets", version = "0.8.2" }
hashbrown =  { version = "0.12", features = ["serde", "ahash-compile-time-rng"] } # A faster hashmap, nostd compatible

unicorn-engine = "2.0.1"
iced-x86 = "1.18.0"
